--- a/coffee2jsx/index.html
+++ b/coffee2jsx/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Coffee to JSX</title>
+    <title>Webpack App</title>
   </head>
   <body>
   <script type="text/javascript" src="app.js"></script></body>
